Implementing InitialMigration, IUserAccount

--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB; Database=DemoEmployeeDb; Trusted_Connection=True; TrustServerCertificate=True;"
+  },
+
+  "JwtSection": {
+    "Key": "B@Z~!ONi2j?^O:d/jM[9%;1X=D6n{:m,",
+    "Issuer": "https://localhost:7206",
+    "Audience": "https://localhost:7206"
+  }
 }
