--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB; Database=DemoEmployeeDb; Trusted_Connection=True; TrustServerCertificate=True;"
+    "DefaultConnection": "Server=(localdb)\\ProjectModels; Database=DemoEmployeeDb; Trusted_Connection=True; TrustServerCertificate=True;"
   },
 
   "JwtSection": {
